# netbox-mikrotik

./: pyproject.toml  setup.py
.github/workflows/: build_and_publish.yml
netbox_mikrotik/: __init__.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox_mikrotik/api/: serializers.py  urls.py  views.py
netbox_mikrotik/api/serializers/: __init__.py  device.py  dhcp.py
netbox_mikrotik/api/views/: __init__.py  device.py  dhcp.py
netbox_mikrotik/filtersets/: __init__.py  device.py  dhcp.py
netbox_mikrotik/forms/: __init__.py  device.py  dhcp.py
netbox_mikrotik/locale/de/LC_MESSAGES/: django.po
netbox_mikrotik/migrations/: 0001_initial.py
netbox_mikrotik/models/: __init__.py  device.py  dhcp.py
netbox_mikrotik/tables/: __init__.py  device.py  dhcp.py
netbox_mikrotik/templates/netbox_mikrotik/: mikrotikdevice.html  mikrotikdhcplease.html  mikrotikdhcpserver.html  mikrotikdhcpserver_leases.html  syncgroup.html
netbox_mikrotik/templates/netbox_mikrotik/device/: mikrotik.html
netbox_mikrotik/views/: __init__.py  device.py  dhcp.py
netbox_mikrotik/views/dcim/: __init__.py  device.py
scripts/: cleanup.py
