[project]
name = "netbox-mikrotik"
dynamic = ["version"]
description = "Sync IP-Adresses to Mikrotik Adress Lists and more."
authors = [
    {name = "Julius Koenig", email = "info@bastelquartier.de"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "src/netbox_mikrotik/__init__.py"

[tool.pdm.scripts]
push-tags = { shell = "git push origin --tags" }